--- a/GendocsForms/Forms/FrmPedidoEdit.resx
+++ b/GendocsForms/Forms/FrmPedidoEdit.resx
@@ -1,64 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<root>
-  <!-- 
-    Microsoft ResX Schema 
-    
-    Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
-    associated with the data types.
-    
-    Example:
-    
-    ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>[base64 mime encoded serialized .NET Framework object]</value>
-    </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-        <comment>This is a comment</comment>
-    </data>
-                
-    There are any number of "resheader" rows that contain simple 
-    name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
-    mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
-    extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
-    read any of the formats listed below.
-    
-    mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-            : and then encoded with base64 encoding.
-    
-    mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-            : and then encoded with base64 encoding.
-
-    mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
-            : using a System.ComponentModel.TypeConverter
-            : and then encoded with base64 encoding.
-    -->
+﻿<root>
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -117,29 +57,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <assembly alias="System.Drawing.Common" name="System.Drawing.Common, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAOlSURBVHhe7du7qlVXFMbxY3oLC1NE7dQiPkXwgkJQxCopUltZWwZBsBIFQcG3EKwNqE8ggi8g
-        2sQoRLzh5fvAw5LNf50z12Us9txz/OFXueYcm+Fm7+iJW1mWZVmWZVmWZVmWZVmWZVm2nn1NOwqPhqZO
-        eDQ0dcKjoakTHg1NnfBoaOqER0OttWgHFh4NtdaiHVh4NNRai3Zg4dFQay3agYVHQ621aAcWHg211qId
-        WHg0NHXCo6GpEx4NTZ3waGjqhEdDUyc8Gpo64dFQay3agYVHQ621aAcWHg211qIdWHg01FqLdmDh0VBr
-        LdqBhUdDrbVoBxYeDbXWoh1YeDTUWot2YOHRUGst2oGFR0OtJDpnfdGzSyiJzll4NNRKonPWFz27hJLo
-        nIVHQ60kOmd90bNLKInOWXg01Eqic9YXPbuEkuichUdDrSQ6Z33Rs0soic5ZeDTUSqJz1hc9u4SS6JyF
-        R0OttWgHdkueyP/fPZO7clJmiYZaa9EOdvNQjsqk6GJrLdpBif/kNxkdXWqtRTso9UZ+lVHRhdZatIMh
-        /HE0KrrMWuq00A6GOi6Do4usJDpnfdGzY8yZl/9OaI59kMvys+yXS/JW6Nk7Mji6yEqic9YXPTvGXJUs
-        /6ysdlHo+acyOLrISqJz1hc9O8YcjV2+2yufZfWM/4tocKuXbCuJzllf9OwYUzsluy3/nPS1T77I6rlX
-        MrjVS7aVROesL3p2jClNeedv5+8EOpsfQbs0x/L9636Ozt+WwdFFtmlFL99G/YmYLrJNaonl/yOjosts
-        U5r6hevOyHuh8+Yv3yMyKrrQNqEl3vm+/4SMji612lvine87fpdJ0cVWc9Us39HlVmtVLd/RAKux6pbv
-        aIjVVpXLdzTIaqra5TsaZrVU9fIdDbQaqn75jobaurcRy3c02Na5jVm+o+G2rm3U8h29gFpVt3xHL6JG
-        VS7f0QupTbXLd/RialL18h29oFpUv3xHL6oGG7H8de+l9C0ulx/cQaHFfZI5fozoH1dmO+R3OC3vkexU
-        vvNn6orQAq9LX7n8GbsvtMQ/hMrlz9wLoUUeltVy+TP3i9Ai/5U94v8J6k+5IY/lo9Dzll+4I/K7lZbp
-        f5ni3wT6NZLLH9nfQgsdIj92JnRPaKmlcvkTey602BL5sTOxA0KL3c1reSD+iVk2oQtCC/6R/zGc/0R8
-        U/6SY/KTZDN0TX5ctj+O/J3gL2b/9cQhyQK7Kv5NOC/+OKqora1vHe89NArfyO0AAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAABGdBTUEAALGPC/xhBQAAA6VJREFUeF7t
+        27uqVVcUxvFjegsLU0Tt1CI+RfCCQlDEKilSW1lbBkGwEgVBwbcQrA2oTyCCLyDaxChEvOHl+8DDks1/
+        nTPXZSz23HP84Ve55hyb4Wbv6IlbWZZlWZZlWZZlWZZlWZZlWbaefU07Co+Gpk54NDR1wqOhqRMeDU2d
+        8Gho6oRHQ621aAcWHg211qIdWHg01FqLdmDh0VBrLdqBhUdDrbVoBxYeDbXWoh1YeDQ0dcKjoakTHg1N
+        nfBoaOqER0NTJzwamjrh0VBrLdqBhUdDrbVoBxYeDbXWoh1YeDTUWot2YOHRUGst2oGFR0OttWgHFh4N
+        tdaiHVh4NNRai3Zg4dFQay3agYVHQ60kOmd90bNLKInOWXg01Eqic9YXPbuEkuichUdDrSQ6Z33Rs0so
+        ic5ZeDTUSqJz1hc9u4SS6JyFR0OtJDpnfdGzSyiJzll4NNRKonPWFz27hJLonIVHQ621aAd2S57I/989
+        k7tyUmaJhlpr0Q5281COyqToYmst2kGJ/+Q3GR1daq1FOyj1Rn6VUdGF1lq0gyH8cTQqusxa6rTQDoY6
+        LoOji6wkOmd90bNjzJmX/05ojn2Qy/Kz7JdL8lbo2TsyOLrISqJz1hc9O8ZclSz/rKx2Uej5pzI4ushK
+        onPWFz07xhyNXb7bK59l9Yz/i2hwq5dsK4nOWV/07BhTOyW7Lf+c9LVPvsjquVcyuNVLtpVE56wvenaM
+        KU1552/n7wQ6mx9BuzTH8v3rfo7O35bB0UW2aUUv30b9iZgusk1qieX/I6Oiy2xTmvqF687Ie6Hz5i/f
+        IzIqutA2oSXe+b7/hIyOLrXaW+Kd7zt+l0nRxVZz1Szf0eVWa1Ut39EAq7Hqlu9oiNVWlct3NMhqqtrl
+        OxpmtVT18h0NtBqqfvmOhtq6txHLdzTY1rmNWb6j4baubdTyHb2AWlW3fEcvokZVLt/RC6lNtct39GJq
+        UvXyHb2gWlS/fEcvqgYbsfx176X0LS6XH9xBocV9kjl+jOgfV2Y75Hc4Le+R7FS+82fqitACr0tfufwZ
+        uy+0xD+EyuXP3AuhRR6W1XL5M/eL0CL/lT3i/wnqT7khj+Wj0POWX7gj8ruVlul/meLfBPo1kssf2d9C
+        Cx0iP3YmdE9oqaVy+RN7LrTYEvmxM7EDQovdzWt5IP6JWTahC0IL/pH/MZz/RHxT/pJj8pNkM3RNfly2
+        P478neAvZv/1xCHJArsq/k04L/44qqitrW8d7z00Ct/I7QAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="btnEditar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnEditar.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAWtJREFUWEft
         lr1KA0EURhPB3iadWmjpE4gPIWIaGx9GJRZqIcG3SBkEQdDCJ/AlREUtRPGX6/nu3IVdtNuZyj1wyM6d
@@ -151,7 +91,7 @@
         vwX8WQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="btnAgregarRecurso.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnAgregarRecurso.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAjhJREFUWEft
         l8lOFUEYhe8C2UAEtroVNGHB6GuIPIug7kG2BMISkHdwBaiJLyHDyoEtJMi0wuI71OkEUtzu6nvBIeFL
@@ -166,7 +106,7 @@
         ZdU/I7q8pK9oHU2hrJv0nn+ERuMCXFfliLHJ4EkAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnEliminar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnEliminar.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAipJREFUWEft
         l81OFEEURmcxspEIbHUrYMKCQfA1RJ4FBt2DbMkQloz6Dq4ANfEl5GelwBYSRWAF5flSXxOScqa7ZxqM
@@ -181,7 +121,7 @@
         vecWqdX+AMi5tbjFTxEgAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btnBajar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnBajar.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAL9JREFUWEft
         k0EOgzAMBPMAHsHjuFbi1v62P2k7DmtESHqAAofKI1ngjdhdkEhB8AtvofV6lB8FokAUiAJR4I8L4N0z
@@ -190,7 +130,7 @@
         sIOUPhEJqMB+JNb3AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btnSubir.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnSubir.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAALxJREFUWEft
         kEEOgzAQA/MAHsHjuFbiBr/tT5rai1MRBQ6IJIeyI63IOmBbBMe5Q4zxxdHaFwTPmMQquQ8I3Icn+pRA
@@ -199,10 +139,7 @@
         BScXqMQbNfFSAAAAAElFTkSuQmCC
 </value>
   </data>
-  <metadata name="cmsMenuColumnas.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <data name="tsmConfigurarGrid.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="tsmConfigurarGrid.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAANdJREFUOE+1
         kj8OAUEYxSfRoKBSaZ1AoXMKrmCvIHECZ1CiUIrSSYiOC8gmeu+XfCOzs4YV2Zf8krff9+bfzrg6NRJz
@@ -211,7 +148,7 @@
         EV7j1GrJa0R/P6RYPN+dUekpxxqLpYGvQ849AagYODSF7xZ9AAAAAElFTkSuQmCC
 </value>
   </data>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>126</value>
+  <metadata name="$this.TrayHeight" type="System.Int32, System.Private.CoreLib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
+    <value>93</value>
   </metadata>
 </root>
